<resources>
    <string name="app_name">FinalProject</string>

    /// Doyoung's place for strings
    <string name="kdy_mainDoyoungBtn">Doyoung</string>
    <string name="kdy_help">Help</string>

    <string name="kdy_enterDate">Enter a date</string>
    <string name="kdy_searchButton">Search</string>
    <string name="kdy_userGuide">User Guide</string>
    <string name="kdy_firstStep">1.Enter a number</string>
    <string name="kdy_secondStep">2.Click the Search button</string>
    <string name="kdy_thirdStep">3.Click an item in the list to see details</string>
    <string name="kdy_additionalStep">(If you can\'t see the list, choose the lower number)</string>
    <string name="kdy_close">Close</string>

    <string name="kdy_foundPhoto">We found photos</string>
    <string name="kdy_units">item(s)</string>
    <string name="kdy_cancelled">Cancelled</string>
    <string name="kdy_undo">Undo</string>

    <string name="kdy_existed">This photo already existed</string>
    <string name="kdy_camera">Camera: </string>
    <string name="kdy_noData">No data</string>

    <string name="kdy_saveImage">Save this image</string>
    <string name="kdy_savedImageTitle">Saved images</string>
    <string name="kdy_delete">Delete</string>
    <string name="kdy_isDeleted">is deleted</string>
    <string name="kdy_view">View</string>

    /// Nick's place for strings
    <string name="help1">Enter Height and Width</string>
    <string name="help2">Hit the Search button</string>
    <string name="help3">enjoy the picture</string>
    <string name="help4">save the image to fave</string>
    <string name="howto">How to use</string>
    <string name="done">Close</string>
    <string name="height">Height</string>
    <string name="search">Search</string>
    <string name="save_image">Save Image</string>
    <string name="width">Width</string>
    <string name="pic">pic</string>
    <string name="Delete">Delete</string>
    <string name="URL">URL</string>
    <string name="goodbye">Thank you for trying this app</string>
    <string name="leaving">Exit to main page?</string>
    <string name="Yes">yes</string>
    <string name="No">no</string>
    <string name="check">Please enter a Width and Height</string>

    /// Rong's place for strings
    <string name="weatherApp">Welcome to use WeatherStack App</string>
    <string name="enterUserName">Enter your user name: </string>
    <string name="typePassword">Type your password:</string>
    <string name="loginButton">Login</string>
    <string name="searchButton">Search</string>
    <string name="textCheckBox">Do you like this city?</string>
    <string name="saveCity">Save City</string>
    <string name="help">Help</string>
    <string name="typeUserName">Type user name</string>
    <string name="userName">User name</string>
    <string name="editCity">Type city here</string>
    <string name="rongButton">Rong</string>
    <string name="helpText1">1\. Input a correct user name</string>
    <string name="helpText2">2\. Input a correct password </string>
    <string name="helpText3">3\. Click \"Login\" button </string>
    <string name="helpText4">4\. Confirm Login info </string>
    <string name="helpText5">5\. Type in your desired city name </string>
    <string name="helpText6">6\. Click \"Search\" button </string>
    <string name="helpText7">7\. Confirm city info </string>
    <string name="helpText8">8\. Get weather info by clicking city name </string>
    <string name="helpTitle">User Manual: </string>
    <string name="close">Close</string>
    <string name="notPass">Incorrect password!</string>
    <string name="leave">Do you want to leave Weather Stack APP?</string>
    <string name="delete">Do you want to delete the weather info?</string>
    <string name="question">Question:</string>
    <string name="thanks">See you!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login">Do you want to login in as: </string>
    <string name="welcome">Welcome back  </string>
    <string name="likeCity">You do like this city:  </string>
    <string name="weather">Do you want to check weather for  </string>
    <!--    <string name = "cityDetail">city goes here</string>-->
    <string name="timeDetail">time goes here</string>
    <string name="temp">Temperature</string>
    <string name="description">description here</string>
    <string name="cityCheck">Please search a city name first!</string>
    <string name="weatherSave">Weather info saved</string>
    <string name="notNull">Please user name and password!</string>
    <string name="deleteConfirm">You deleted this weather info.</string>
    <string name ="undo">UNDO</string>



    /// Xingyun's place for strings
    <string name="placeholder_search_articles_text">Search Articles</string>
    <string name="btn_search_xyz">Search</string>
    <string name="btn_help_xyz">Help</string>
    <string name="toast_onCreate_xyz">Finished creating the NewYorkTimes Activity.</string>
    <string name="msg_confirm_xyz">Are you sure?</string>
    <string name="msg_exit_xyz">Exiting to MainMenu</string>
    <string name="TemperatureDetail">temperature here</string>
    <string name="cityDetail">city goes here</string>
    <string name="height">Height</string>
    <string name="search">Search</string>
    <string name="save_image">Save Image</string>
    <string name="width">Width</string>
    <string name="pic">pic</string>
    <string name="xyz_alert_help">1. Input the article title in the search bar.  2. Press the \'SEARCH\' button Press the \'HELP\' button to show this instruction again.</string>
    <string name="xyz_fav_btn">Favorite</string>
    <string name="xyz_removeFav_btn">Remove</string>
    <string name="xyz_alert_help_title">Instruction</string>
    <string name="xyz_addFav_btn">Add to Fav</string>

</resources>